--- a/practice/src/index.html
+++ b/practice/src/index.html
@@ -444,7 +444,8 @@
                 <!-- /.card__list -->
                 <strong class="design__card-pricetag">
                   900 руб / м<sup>2</sup>
-                </strong> <!-- /.card__pricetag -->
+                </strong> 
+                <!-- /.card__pricetag -->
               </div>
               <!-- /.card__text -->
             </div>
@@ -602,6 +603,100 @@
       <!-- /.container -->
     </section>
     <!-- /.section steps section--dark -->
+    <!-- Section clients start -->
+    <section class="section clients">
+      <div class="container">
+        <div class="section-title clients__section-title">
+          <h2 class="section-title__heading clients__heading">Наши клиенты</h2>
+          <!-- /.section-title__headeing -->
+          <div class="section-title__image">
+            <img src="img/clients-hand.svg" alt="clients">
+          </div>
+          <!-- /.section-title__image  -->
+          <p class="section-title__description clients__description">
+              80% наших клиентов рекомендуют нас <br> своим знакомым и друзьям
+          </p>
+          <!-- /.section-title__description -->
+        </div>
+        <!-- /.section-title -->
+        <div class="row clients__row">
+          <div class="card clients-card">
+            <div class="clients-card__client">
+              <img src="img/client1.jpg" alt="" class="clients-card__img">
+              <h2 class="clients-card__name">Савельева Екатерина Львовна</h2>
+              <!-- /.clients-card__name -->
+            </div>
+            <p class="clients-card__text">Я хочу поблагодарить ребят за их работу. Они вложили душу в ремонт. Я очень благодарна, что сделали как для самих себя. Большое спасибо, я выражаю проектному менеджеру за его профессионализм и подход. Процесс ремонта был завершен быстрее, чем ожидалось. Команда мобильная и профессиональная. Работы выполнены качественно без нареканий. Цены демократические. Я рекомендую этих мастеров.</p>
+            <!-- /.clients-card__text -->
+            <div class="clients-card__item-group">
+              <div class="clients-card__item clients-card__item--first">
+                <img src="img/scale.svg" alt="" class="clients-card__scale">
+                <span class="clients-card__item-txt">40М <sup>2</sup>
+              </span> 
+              </div>
+              <!-- /.clients-card__item -->
+              <div class="clients-card__item clients-card__item--second">
+                <img src="img/note.svg" alt="" class="clients-card__note">
+                <span class="clients-card__item-txt">48 дней</span> <!-- /.clients-card__number -->
+              </div>
+              <!-- /.clients-card__item -->
+            </div>
+            <!-- /.clients-card__item-group -->
+          </div>
+          <!-- /.card clients-card -->
+          <div class="card clients-card">
+            <div class="clients-card__client">
+              <img src="img/client2.jpg" alt="" class="clients-card__img">
+              <h2 class="clients-card__name">Большов Михаил Анатольевич</h2>
+              <!-- /.clients-card__name -->
+            </div>
+            <p class="clients-card__text">Я хочу поблагодарить ребят за их работу. Они вложили душу в ремонт. Я очень благодарен, что сделали как для самих себя. Большое спасибо, я выражаю проектному менеджеру за его профессионализм и подход. Процесс ремонта был завершен быстрее, чем ожидалось. Команда мобильная и профессиональная. Работы выполнены качественно без нареканий. Качество высокое.  Я рекомендую этих мастеров.</p>
+            <!-- /.clients-card__text -->
+            <div class="clients-card__item-group">
+              <div class="clients-card__item clients-card__item--first">
+                <img src="img/scale.svg" alt="" class="clients-card__scale">
+                <span class="clients-card__item-txt">90М <sup>2</sup>
+              </span> 
+              </div>
+              <!-- /.clients-card__item -->
+              <div class="clients-card__item clients-card__item--second">
+                <img src="img/note.svg" alt="" class="clients-card__note">
+                <span class="clients-card__item-txt">128 дней</span> <!-- /.clients-card__number -->
+              </div>
+              <!-- /.clients-card__item -->
+            </div>
+            <!-- /.clients-card__item-group -->
+          </div>
+          <!-- /.card clients-card -->
+          <div class="card clients-card">
+            <div class="clients-card__client">
+              <img src="img/client3.jpg" alt="" class="clients-card__img">
+              <h2 class="clients-card__name">Хасанов Даниил Муратович</h2>
+              <!-- /.clients-card__name -->
+            </div>
+            <p class="clients-card__text">Я хочу поблагодарить ребят за их работу. Они вложили душу в ремонт. Я очень благодарен, что сделали как для самих себя. Большое спасибо, я выражаю проектному менеджеру за его профессионализм и подход. Процесс ремонта был завершен быстрее, чем ожидалось. Команда мобильная и профессиональная. Работы выполнены качественно без нареканий. Качество высокое. Цены демократические. </p>
+            <!-- /.clients-card__text -->
+            <div class="clients-card__item-group">
+              <div class="clients-card__item clients-card__item--first">
+                <img src="img/scale.svg" alt="" class="clients-card__scale">
+                <span class="clients-card__item-txt">56М <sup>2</sup>
+              </span> 
+              </div>
+              <!-- /.clients-card__item -->
+              <div class="clients-card__item clients-card__item--second">
+                <img src="img/note.svg" alt="" class="clients-card__note">
+                <span class="clients-card__item-txt">86 дней</span> <!-- /.clients-card__number -->
+              </div>
+              <!-- /.clients-card__item -->
+            </div>
+            <!-- /.clients-card__item-group -->
+          </div>
+          <!-- /.card clients-card -->
+        </div>
+        <!-- /.row clients__row -->
+      </div>
+    </section>
+    <!-- /.section clients -->
   </main>
   <!-- footer start -->
   <footer class="footer section--dark">
