--- a/practice/src/index.html
+++ b/practice/src/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
+  <script src="https://api-maps.yandex.ru/2.1/?apikey=ваш API-ключ&lang=ru_RU" type="text/javascript">
+  </script>
   <title>Турецкий ремонт</title>
 </head>
 <body>
@@ -198,18 +200,18 @@
         <p class="control__text">
             На каждом объекте установлена ​​камера, которая транслирует ход работы на часах. В любой момент вы можете зайти на наш сайт и следить за ходом работы в вашей квартире. Посмотрите прямую трансляцию с одного из наших объектов! Оставьте заявку ниже чтобы получить ссылку на трансляцию.
         </p>
-        <form action="" class="form control__form">
+        <form action="php/send-control.php" method="POST" class="form control__form">
           <div class="input-group control__input-group">
             <label for="user-name" class="label control__label form__label label--dark">Имя</label>
-            <input type="text" class="input form__input control__input input--dark" id="user-name" placeholder="Как вас зовут">
+            <input type="text" name="userNameControl" class="input form__input control__input input--dark" id="user-name" placeholder="Как вас зовут">
           </div>
           <div class="input-group control__input-group">
-            <label for="user-phone" class="label control__label form__label label--dark">Телефон</label>
-            <input type="tel" class="input form__input control__input input--dark" id="user-phone" placeholder="Ваш номер телефона">
+            <label for="user-phone"  class="label control__label form__label label--dark">Телефон</label>
+            <input type="tel" name="userPhoneControl" class="input form__input control__input input--dark" id="user-phone" placeholder="Ваш номер телефона">
           </div>
           <button class="button button--primary control__button button__modal">Отправить</button>
           <div class="policy control__policy">
-              <input type="checkbox" class="policy__checkbox" name="policy-checkbox" id="policy-checkbox" checked>
+              <input type="checkbox" class="policy__checkbox" name="policy-checkbox" id="policy-checkbox" >
               <label for="policy-checkbox" class="policy__label control__policy-label">Я соглашаюсь с обработкой данных</label>
           </div>
           <!-- ./policy -->
@@ -255,9 +257,9 @@
                   <!-- /.card__item -->
                 </ul>
                 <!-- /.card__list -->
-                <strong class="card__pricetag">
+                <strong class="card__pricetag types-card__pricetag">
                   от 900 руб / м<sup>2</sup>
-                </strong> <!-- /.card__pricetag -->
+                </strong> <!-- /.card__pricetag types-card__pricetag -->
               </div>
               <!-- /.card__text -->
             </div>
@@ -286,10 +288,10 @@
                   <li class="card__item">Замена дверей</li>
                 </ul>
                 <!-- /.card__list -->
-                <strong class="card__pricetag">
+                <strong class="card__pricetag types-card__pricetag">
                   от 1800 руб / м<sup>2</sup>
                 </strong>
-                  <!-- /.card__pricetag -->
+                  <!-- /.card__pricetag types-card__pricetag -->
               </div>
               <!-- /.card__text -->
             </div>
@@ -319,9 +321,9 @@
                   <!-- /.card__item -->
                 </ul>
                 <!-- /.card__list -->
-                <strong class="card__pricetag">
+                <strong class="card__pricetag types-card__pricetag">
                   от 4000 руб / м<sup>2</sup>
-                </strong> <!-- /.card__pricetag -->
+                </strong> <!-- /.card__pricetag types-card__pricetag -->
               </div>
               <!-- /.card__text -->
             </div>
@@ -333,7 +335,7 @@
       </div>
       <!-- /.container -->
     </section>
-    <!-- /.section design-->
+    <!-- /.section types-->
     <section class="section  design">
       <div class="container">
         <div class="section-title design__section-title">
@@ -350,8 +352,8 @@
           <!-- /.section-title__description -->
         </div>
         <!-- /.section-title -->
-        <div class="design__row">
-          <div class="design__col" id="des30Left">
+        <div class="design__row row">
+          <div class="design__col col-30" id="des30Left">
             <div class="design__card">
               <img src="img/design-1.jpg" alt="" class="design__card-image">
               <div class="design__card-text">
@@ -378,7 +380,7 @@
             <!-- /.card -->
           </div>
           <!-- /.col-30 -->
-          <div class="design__col" id="des30Center">
+          <div class="design__col col-30" id="des30Center">
             <div class=" design__card">
               <img src="img/design-2.jpg" alt="" class="design__card-image">
               <div class="design__card-text">
@@ -410,7 +412,7 @@
             <!-- /.card -->
           </div>
           <!-- /.col-30 -->
-          <div class="design__col" id="des30Right">
+          <div class="design__col col-30" id="des30Right">
             <div class="design__card">
               <img src="img/design-3.jpg" alt="" class="design__card-image">
               <div class="design__card-text">
@@ -605,6 +607,7 @@
     <!-- /.section steps section--dark -->
     <!-- section team start -->
     <section class="section team team__section">
+       
       <div class="container">
         <div class="section-title team__section-title section-title--light">
           <h2 class="section-title__heading team__heading">Наша команда</h2>
@@ -765,29 +768,49 @@
     <div class="container">
       <div class="footer__wrap">
         <h3 class="footer__title">Остались вопросы?</h3>
-        <form action="" class="form footer__form">
+        <form action="php/send-footer.php" method="POST" class="form footer__form modal__form'" id="modal__form">
           <div class="input-group footer__input-group">
-            <label for="user-name" class="label form__label label-light">Имя</label>
-            <input type="text" class="input input--light form__input footer__input" id="user-name" placeholder="Как вас зовут">
+            <label for="user-name"  class="label form__label label-light">Имя</label>
+            <input type="text" name="userNameFooter" class="input input--light form__input footer__input" id="user-name" placeholder="Как вас зовут">
           </div>
           <div class="input-group footer__input-group">
-            <label for="user-phone" class="label form__label label-light">Телефон</label>
-            <input type="tel" class="input input--light form__input footer__input" id="user-phone" placeholder="Ваш номер телефона">
+            <label for="user-phone"  class="label form__label label-light">Телефон</label>
+            <input type="tel" name="userPhoneFooter" class="input input--light form__input footer__input" id="user-phone" placeholder="Ваш номер телефона">
           </div>
-          <div class="input-group footer__input-group footer__input-group--full-width">
+          <div class="input-group footer__input-group footer__input-group--third footer__input-group--full-width">
             <label for="user-question" class="label form__label label-light">Вопрос </label>
-            <input type="text" class="input input--light form__input footer__input" id="user-email" placeholder="Я хочу спросить: ">
+            <input type="text" name="userTextFooter" class="input input--light form__input footer__input" id="user-email" placeholder="Я хочу спросить: ">
           </div>
           <div class="policy footer__policy">
-              <input type="checkbox" class="policy__checkbox" name="policy-checkbox" id="policy-checkbox" checked>
+              <input type="checkbox" class="policy__checkbox" name="policy-checkbox" id="policy-checkbox" >
               <label for="policy-checkbox" class="policy__label policy__label--center">Я соглашаюсь с обработкой данных</label>
           </div>
           <!-- ./policy -->
-          <button class="button button--primary footer__button button__modal">Отправить</button>
+          <button class="button button--primary footer__button">Отправить</button>
         </form>
         <!-- /.form footer__form -->
       </div>
-      <!-- /.footer-wrap -->
+      <div class="footer__wrap--second">
+        <div class="footer__description">
+          <p class="footer__adress">Ростов на дону, Торговый центр Plaza <br>
+            Прямой телефон
+            <a href="tel:+79997683299" class="footer__phone">+7 (999) 768 32 99</a>
+            <!-- /.footer__phone -->
+          </p>
+          <!-- /.footer__adress -->
+          <div class="footer__icon">
+            <img src="img/mail.svg" alt="" class="footer__image">
+          </div>
+          <div class="footer__icon">
+            <img src="img/instagramm.svg" alt="" class="footer__image">
+          </div>
+        </div>
+        <!-- /.footer__description -->
+        <!-- /.footer-wrap -->
+        <div class="map__wrap">
+          <div class="footer__map map" id="map"></div>
+        </div>
+      </div>
     </div>
     <div class="footer__menu">
       <div class="container">
@@ -818,7 +841,7 @@
       <!-- /.modal__close -->
       <h3 class="modal__title">Оставьте заявку и наш менеджер свяжется с вами </h3>
       <!-- /.modal__title -->
-      <form action="" class="form modal__form">
+      <form action="php/send.php" method="POST" class="form modal__form" id="modal__form">
         <div class="input-group modal__input-group">
           <label for="user-name" class="label form__label label-light">Имя</label>
           <input type="text" name="userName" class="input input--light form__input modal__input" id="user-name" placeholder="Как вас зовут">
@@ -835,7 +858,7 @@
             <input type="email" name="userEmail" class="input input--light form__input modal__input" id="user-email" placeholder="Ваш E-Mail">
         </div>
         <div class="policy modal__policy">
-            <input type="checkbox" class="policy__checkbox" name="policy-checkbox" id="policy-checkbox" checked>
+            <input type="checkbox" class="policy__checkbox" name="policy-checkbox" id="policy-checkbox" >
             <label for="policy-checkbox" class="policy__label">Я соглашаюсь с обработкой данных</label>
         </div>
         <!-- ./policy -->
